<resources>
    //App name
    <string name="app_name" translatable="false">ToPDF</string>
    //button
    <string name="create_button">Create PDF</string>
    <string name="convert_button">Convert to PDF</string>

    <string name="camera">Take pictures</string>
    <string name="file">From file…</string>
    <string name="about">About</string>
    //setting
    <string name="setting">Setting</string>
    <string name="setting_language">Language</string>


    <string name="permission_denied_text">Permission Denied</string>
    <string name="storage_need_rationale_description" translatable="false">Storage permission is needed for proper functioning of app.</string>
    <string name="storage_need_rationale_for_not_ask_again_flag" translatable="false">You have chosen to never ask the permission again, but storage permission is needed for proper functioning of app.</string>
    <string name="enable_from_settings_text" translatable="false">Enable from settings</string>
    <string name="cancel_text">Cancel</string>
    <string name="ask_again_text">Ask Again</string>
    <string name="one_more_thing_text">One more thing!</string>
    <string name="storage_manager_permission_rationale">In Android 11, you need to allow a special storage permission</string>
    <string name="close_app_text">Close App</string>
    <string name="allow_text">Allow</string>
    <string name="title_activity_settings">Setting</string>
    <string name="support_string">Support Microsoft Office file format (.doc, .docx, .xls, .xlsx, .ppt, .pptx)</string>
    <string name="convert_document_to_pdf_string">Convert document file to PDF</string>
    <string name="convert_and_save">Convert</string>
    <string name="no_file_chosen_warning">No File chosen!</string>
    <string name="add_file_successfully">Successfully added </string>
    <string name="error_string">An error has occurred!</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="nav_edit_string">Edit</string>
    <string name="nav_view_string">View</string>
    <string name="nav_save_string">Save</string>
    <string name="title_activity_image_to_pdfactivity" translatable="false">ImageToPDFActivity</string>
    <string name="title_edit">Edit</string>
    <string name="title_view">View</string>
    <string name="title_save">Save</string>
    <string name="file_already_exist">File already exist</string>
    <string name="m1">The file </string>
    <string name="m2">in</string>
    <string name="m3">is already exist. Choose an action</string>
    <string name="action_rename">Rename</string>
    <string name="action_overwrite">Overwrite</string>
    <string name="action_close">Close</string>
    <string name="convert_success_msg">Convert successfully!</string>
    <string name="action_view">View</string>
    <string name="action_share">Share</string>
    <string name="preview_images">Preview PDF</string>
    <string name="quality">Quality</string>
    <string name="original">Original</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="file_name">File name</string>
    <string name="enter_file_name_here">Enter file name here</string>
    <string name="path_to_save_the_file">Path to save the file</string>
    <string name="path">Path</string>
    <string name="select_a_file_to_start_converting">Select a file to start converting</string>
    <string name="browse_file">Browse</string>
    <string name="unsupport_type">"Unsupported file type: "</string>
    <string name="paper_size">Paper Size</string>
    <string name="defaultSaveLocation">Default save location</string>
    <string name="number_of_image_added">" images added"</string>
    <string name="aboutme_version">"Version: "</string>
    <string name="aboutme_author">Author: Nguyen Dinh Truong Giang</string>
    <string name="aboutme_description">ToPDF is a simple app to create PDF files</string>
    <string name="aboutme_email" translatable="false">giangcua3d@gmail.com</string>
    <string name="aboutme_gmailcontact">Contact me via Gmail</string>
    <string name="aboutme_fbId" translatable="false">giangtruong01</string>
    <string name="aboutme_contactfb">Contact me via Facebook</string>
    <string name="aboutme_githubId" translatable="false">giang428</string>
    <string name="aboutme_github">Github page</string>
    <string name="aboutme_a">About me</string>
    <string name="confirm_back_title">Are you sure?</string>
    <string name="confirm_back_msg">Discard all the change?</string>
    <string name="no_str">No</string>
    <string name="yes_str">Yes</string>
    <string name="options">Options</string>
    <string name="back">Back</string>
    <string name="confrim">Confrim</string>
    <string name="item_add">Add</string>
    <string name="item_crop">Crop</string>
    <string name="item_filter">Filter</string>
    <string name="item_rearrange">Rearrange</string>
    <string name="item_remove">Remove</string>
    <string name="delete_error_msg">Cannot delete! The pdf file must contain at least 1 image</string>
    <string name="item_draw">Draw</string>
    <string name="item_add_text">Add text</string>
    <string name="item_watermark">Add watermark</string>
    <string name="title_activity_crop">Crop</string>
    <string name="pick_images">Pick images</string>
    <string name="item_rotate">Rotate</string>
    <string name="crop_image">Crop Image</string>
    <string name="convert_file_added">1 file have been successfully added</string>
</resources>