<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_about"
        app:drawableTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_settings"
        app:drawableTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/about"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:drawableTopCompat="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/shape_round"
        android:drawableTop="@drawable/ic_add_image_white"
        android:text="@string/create_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/shape_round"
        android:drawableTop="@drawable/ic_pdf_convert"
        android:text="@string/convert_button"
        android:textColor="#000000"
        android:theme="@style/Button.Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_button"
        app:layout_constraintVertical_bias="0.083" />
</androidx.constraintlayout.widget.ConstraintLayout>
